# resume-normalizer

./: .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_api_keys.py
app/: config.py  database.py  dependencies.py  main.py  rate_limit.py
app/api/: router.py
app/api/routes/: extract.py  health.py  keys.py
app/auth/: middleware.py  models.py  service.py
app/schemas/: auth.py  response.py  resume.py
app/services/: file_detector.py  llm_service.py  ocr_service.py  pdf_renderer.py  pipeline.py  s3_service.py  text_extractor.py
app/templates/: resume_template.py
app/utils/: exceptions.py  logging.py
scripts/: deploy.sh  init-s3.sh  setup-server.sh
tests/: conftest.py
tests/test_api/: test_extract.py  test_health.py  test_keys.py
tests/test_services/: test_file_detector.py  test_llm_service.py  test_pdf_renderer.py  test_s3_service.py
